--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebaseui": "^4.2.0",
+    "bootstrap": "^4.3.1",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
@@ -31,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-plugin-react-hooks": "^2.1.2",
     "firebase": "^7.2.0"
   }
 }
